Updated SMS and Report

--- a/XmLTest/nbproject/project.properties
+++ b/XmLTest/nbproject/project.properties
@@ -25,23 +25,22 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/XmLTest.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=\
-    ${file.reference.javaws.jar}
+endorsed.classpath=
 excludes=
-file.reference.google-voice-java-1.6.jar=C:\\Users\\jaden\\Downloads\\google-voice-java-1.6.jar
-file.reference.google-voice-java-1.8-java5.jar=C:\\Users\\jaden\\Downloads\\google-voice-java-1.8-java5.jar
+file.reference.google-voice-java-1.6.jar-1=dist/lib/google-voice-java-1.6.jar
+file.reference.google-voice-java-1.8-java5.jar-1=dist/lib/google-voice-java-1.8-java5.jar
 file.reference.javaws.jar=C:\\Program Files (x86)\\Java\\jdk1.7.0\\jre\\lib\\javaws.jar
-file.reference.json.jar=C:\\Users\\jaden\\Downloads\\json.jar
-file.reference.xerces.jar=C:\\Users\\jaden\\Downloads\\xerces-1_4_4\\xerces.jar
+file.reference.json.jar-1=dist/lib/json.jar
+file.reference.xerces.jar-1=dist/lib/xerces.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.xerces.jar}:\
-    ${file.reference.google-voice-java-1.6.jar}:\
-    ${file.reference.google-voice-java-1.8-java5.jar}:\
-    ${file.reference.json.jar}
+    ${file.reference.google-voice-java-1.6.jar-1}:\
+    ${file.reference.google-voice-java-1.8-java5.jar-1}:\
+    ${file.reference.json.jar-1}:\
+    ${file.reference.xerces.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -67,7 +66,7 @@ javadoc.version=false
 javadoc.windowtitle=
 jnlp.codebase.type=local
 jnlp.descriptor=application
-jnlp.enabled=true
+jnlp.enabled=false
 jnlp.mixed.code=default
 jnlp.offline-allowed=false
 jnlp.signed=true
